--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 yfinance==0.2.65
 pandas==2.3.2
 matplotlib==3.10.6
-pandas_market_calendars==5.1.1
-scipy==1.15.3
 seaborn==0.13.2
+scipy==1.14.1
+pandas_market_calendars==5.1.1
+tabulate==0.9.0
+plotly==6.3.0
+streamlit==1.50.0
